# postgres-1m-ingestion-benchmark

./: .gitignore  AGENT.md  Makefile  README.md  main.py  pyproject.toml
ingestion_benchmark/: __init__.py  cli.py  data.py  docker.py  methods.py  reporting.py  runner.py  schema.py
