[project]
name = "postgres-1m-ingestion-benchmark"
version = "0.1.0"
description = "PostgreSQL ingestion benchmark harness for GitHub Events CSV data"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "psycopg>=3.3.4",
    "psycopg-binary>=3.3.4",
    "rich>=15.0.0",
    "typer>=0.26.7",
]

[dependency-groups]
dev = []
